# uno-sampler

./: CMakeLists.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UnoEditor.cpp  UnoEditor.h  UnoProcessor.cpp  UnoProcessor.h
src/core/: SampleSlice.cpp  SampleSlice.h  SliceManager.cpp  SliceManager.h  SlicePlayer.cpp  SlicePlayer.h
src/gui/: BeatPad.cpp  BeatPad.h  KnobWithLabel.cpp  KnobWithLabel.h  SliceWaveform.cpp  SliceWaveform.h
src/uno/gui/: SlicerWaveform.h
